--- a/package.json
+++ b/package.json
@@ -54,6 +54,15 @@
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0"
   },
+  "dependencies": {
+    "d3": "^5.7.0",
+    "d3-line": "0.0.1",
+    "d3-queue": "^3.0.7",
+    "d3-selection": "^1.3.2",
+    "d3-shape": "^1.2.2",
+    "queue": "^4.5.0",
+    "topojson": "^3.0.2"
+  },
   "files": [
     "dist"
   ]
